# tollgate

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/tollgate-core/: Cargo.toml
crates/tollgate-core/src/: lib.rs
crates/tollgate-core/src/x402/: challenge.rs  error.rs  mod.rs  payment.rs  types.rs  verify.rs
crates/tollgate-gateway/: Cargo.toml
crates/tollgate-gateway/src/: config.rs  lib.rs  main.rs  proxy.rs  server.rs
crates/tollgate-gateway/tests/: ledger_e2e.rs  proxy_e2e.rs
crates/tollgate-ledger/: Cargo.toml
crates/tollgate-ledger/src/: lib.rs
crates/tollgate-ledger/tests/: postgres_claim_ledger.rs
crates/tollgate-middleware/: Cargo.toml
crates/tollgate-middleware/migrations/: 0001_create_claims.sql
crates/tollgate-middleware/src/: gate.rs  ledger.rs  lib.rs  store.rs
crates/tollgate-middleware/tests/: postgres_claim_ledger.rs  redis_nonce_store.rs
crates/tollgate-settler/: Cargo.toml
crates/tollgate-settler/src/: chain.rs  config.rs  lib.rs  main.rs  worker.rs
crates/tollgate-settler/tests/: settle_hermetic.rs  settle_tenderly.rs
crates/tollgate-settler/tests/support/: mod.rs  rpc_fake.rs
docs/: architecture.md
learning/: 0002-x402-wire-types-serde-boundary-validation.md
