[package]
name = "tollgate-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
alloy-primitives = { version = "1", default-features = false, features = ["std", "k256"] }

[dev-dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
alloy-sol-types = { version = "1", default-features = false, features = ["std"] }

[lints]
workspace = true
