[package]
name = "tollgate-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tollgate-core = { path = "../tollgate-core" }
# Postgres claims ledger (M5a, extracted from `tollgate-middleware` in M5b).
# `runtime-tokio` picks the async runtime glue; `migrate` + `macros` power the
# compile-time-embedded `sqlx::migrate!()` (the SQL is baked into the binary, so no
# database is needed to BUILD). Deliberately no `tls-*` feature: the ledger speaks
# plain Postgres, matching the http-only upstream rule.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
] }
thiserror = "2"

[dev-dependencies]
# `rt-multi-thread` runs the `#[tokio::test]`s that drive the async ledger API;
# `time` powers the bounded timeout in the fail-closed test.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
# The in-file `Claim::from_payment` tests build their fixture payload from JSON.
serde_json = "1"
# Postgres integration test: spins a throwaway Postgres container. `testcontainers`
# gives the runner/`ContainerAsync` API; the `postgres` feature of `-modules`
# provides the ready-made image with its readiness wait.
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
