[package]
name = "tollgate-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tollgate-core = { path = "../tollgate-core" }
axum = "0.8"
tower = "0.5"
http = "1"
serde_json = "1"
# Redis-backed nonce store (M4). `tokio-comp` pulls in the tokio-based async
# runtime glue for the multiplexed connection; no connection-pool feature needed.
redis = { version = "0.27", features = ["tokio-comp"] }
# Postgres claims ledger (M5a). `runtime-tokio` picks the async runtime glue;
# `migrate` + `macros` power the compile-time-embedded `sqlx::migrate!()` (the SQL
# is baked into the binary, so no database is needed to BUILD). Deliberately no
# `tls-*` feature: M5a speaks plain Postgres, matching the http-only upstream rule.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
] }
thiserror = "2"
# Structured logging for the fail-closed store-outage path (ADR-0020): the `Err`
# arm of the nonce claim emits `tracing::error!` before returning 503. No metrics.
tracing = "0.1"

[dev-dependencies]
# `rt-multi-thread` is required so `#[tokio::test]` on the async `claim` test can
# spin a runtime; `macros`/`rt` were already needed by the existing dev setup.
# `time` powers the bounded TTL-poll loop in the Redis integration test.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
# WP4 Redis integration test: spins a throwaway Redis container. `testcontainers`
# gives the runner/`ImageExt`/`ContainerAsync` API; the `redis` feature of
# `-modules` provides the ready-made `Redis` image with its readiness wait.
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres", "redis"] }
